# Creator_cv

./: .env.example  .gitignore  .vercelignore  AGENTS.md  Creator_cv.code-workspace  README.md  app.py  cv-chat.html  cv-edit.html  cv-interview.html  cv-job-fit.html  cv-preview.html  index.html  main.py  package.json  pyproject.toml  vercel.json
.cursor/: settings.json
.cursor/agents/: cv-ats.md  cv-cover-letter.md  cv-workflow.md  linkedin-profile.md  uv-deps.md
.cursor/rules/: creator-cv-project.mdc  cursor-artifacts.mdc  cursor-skills-agents-format.mdc  python-uv-tooling.mdc
api/: gemini.js  index.py
assets/js/: api-client.js  chat.js  cv-render.js  cv-store.js  edit.js  home.js  import-cvs.js  interview-flow.js  interview.js  job-fit.js  markdown.js  pdf-generator.js  preview.js  shared.js  storage.js  sync.js
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_email_verification_and_password_reset.py  0003_refresh_tokens.py  0004_two_factor.py  20260630_1801_9a8fa02fac9a_add_history_entries_table.py
backend/docs/: README.md  supabase-schema.sql
backend/src/: __init__.py  main.py
backend/src/application/: __init__.py  chat_ai_use_case.py  compare_use_case.py  dto.py  history_use_case.py  inputs.py  use_cases.py
backend/src/composition/: __init__.py  app_factory.py
backend/src/domain/: __init__.py  entities.py  exceptions.py  repositories.py  value_objects.py
backend/src/infrastructure/: __init__.py
backend/src/infrastructure/auth/: __init__.py  local_auth.py  qr.py  refresh_tokens.py  supabase_auth.py  tokens.py  totp.py
backend/src/infrastructure/email/: __init__.py  sender.py  templates.py
backend/src/infrastructure/llm/: gemini_client.py
backend/src/infrastructure/persistence/: __init__.py  database.py  models.py  sqlalchemy_backup_codes_repo.py  sqlalchemy_chat_repo.py  sqlalchemy_cv_repo.py  sqlalchemy_email_verification_repo.py  sqlalchemy_history_repo.py  sqlalchemy_password_reset_repo.py  sqlalchemy_refresh_token_repo.py  sqlalchemy_two_factor_pending_repo.py  sqlalchemy_user_repo.py  supabase_chat_repo.py  supabase_cv_repo.py
backend/src/infrastructure/web/: __init__.py  errors.py  flask_app.py  limiter.py  postgres_limiter_storage.py  routes.py
backend/tests/: test_use_cases.py
creator_cv/: __init__.py  config.py  context_sync.py  cv_importer.py  cv_patch.py  cv_render.py  extensions.py  form_parser.py  gemini_adapter.py  gemini_chat.py  interview.py  match_scorer.py  mcp_interview.py  models.py  schemas.py  seed_prueba.py
docs/: supabase-schema.sql
frontend/: index.html  package-lock.json  package.json  vite.config.ts
mcp-ia-preguntas/: CONEXION-CURSOR.md  mcp.cursor.example.json
scripts/: export_to_json.py
tests/: conftest.py  test_adapt_loop.py  test_cv_importer.py  test_match_scorer.py  test_parse_form.py  test_validate_cv.py
(+81 files in other folders)
