[project]
name = "creator-cv"
version = "0.1.0"
description = "Genera y adapta CVs a ofertas de trabajo con Flask + Gemini (formato Harvard)."
requires-python = ">=3.11,<3.14"
dependencies = [
    "flask>=3.0,<4.0",
    "flask-sqlalchemy>=3.1,<4.0",
    "flask-migrate>=4.0,<5.0",
    "flask-wtf>=1.2,<2.0",
    "flask-login>=0.6,<1.0",
    "python-dotenv>=1.0",
    "fpdf2>=2.7,<3.0",
    "python-docx>=1.1,<2.0",
    "pypdf>=5.0,<6.0",
    "google-genai>=1.0,<2.0",
    "pydantic>=2.6,<3.0",
    "email-validator>=2.1",
    "werkzeug>=3.0",
    "markdown>=3.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv]
package = false
