[project]
name = "creator-cv"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=1.70.0",
    "flask>=3.1.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "fpdf2>=2.8.7",
    "markdown>=3.10.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "playwright>=1.58.0",
    "weasyprint>=68.1",
    # Para conectar a Supabase/Postgres en Vercel
    "psycopg[binary]>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-flask>=1.3.0",
]
mcp = [
    "fastmcp>=3.2.0",
]
