[project]
name = "creator-cv-backend"
version = "2.0.0"
description = "Creator CV backend (Flask + Clean Architecture + SQLAlchemy)"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "sqlalchemy>=2.0.0",
    "pyjwt>=2.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
